[gd_scene load_steps=20 format=3 uid="uid://bvlh16yfcevdj"]

[ext_resource type="Script" path="res://Scene/InfraMiniGame/wall_tower_puzzle.gd" id="1_uopbu"]
[ext_resource type="Texture2D" uid="uid://coekrh8wj6iwp" path="res://Asset/城镇建筑/puzzleGameScene.png" id="2_7knxp"]
[ext_resource type="Theme" uid="uid://bklmr3xmk4m5u" path="res://global_theme.tres" id="3_srxaq"]
[ext_resource type="FontFile" uid="uid://b8le0fd0ujbqx" path="res://Asset/Font/1_blod.ttf" id="4_8k53q"]
[ext_resource type="FontFile" uid="uid://to00njkwmxts" path="res://Asset/Font/1_sim.ttf" id="4_vpfxr"]
[ext_resource type="Texture2D" uid="uid://dpe4rybr273da" path="res://Asset/斧子.png" id="5_a1noe"]
[ext_resource type="Texture2D" uid="uid://cq7h3g8gs7vpw" path="res://Asset/hourse/1.png" id="7_hjoyj"]
[ext_resource type="Texture2D" uid="uid://nupp17vxn0nh" path="res://Asset/hourse/2.png" id="8_6kmu4"]
[ext_resource type="Texture2D" uid="uid://davkbd86n4t1w" path="res://Asset/hourse/4.png" id="9_ljnbp"]
[ext_resource type="Texture2D" uid="uid://cahvksg3fhy0c" path="res://Asset/hourse/5.png" id="10_fxcq2"]
[ext_resource type="Texture2D" uid="uid://cke5hd02xhkwh" path="res://Asset/hourse/6.png" id="11_568vk"]
[ext_resource type="Texture2D" uid="uid://calsispsgnqo4" path="res://Asset/hourse/7.png" id="12_gg73b"]
[ext_resource type="Texture2D" uid="uid://xs0sj7wpixsi" path="res://Asset/hourse/8.png" id="13_dudkv"]
[ext_resource type="Texture2D" uid="uid://b5h2s5sdllvxe" path="res://Asset/hourse/9.png" id="14_nhb52"]
[ext_resource type="Texture2D" uid="uid://cak3ibfuy7oto" path="res://Asset/hourse/10.png" id="15_k3vuq"]
[ext_resource type="Texture2D" uid="uid://dee8o7jpa7ba0" path="res://Asset/旋转.png" id="16_3i658"]

[sub_resource type="Animation" id="Animation_2p14g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_hjoyj")]
}

[sub_resource type="Animation" id="Animation_cxxfk"]
resource_name = "carriage"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("7_hjoyj"), ExtResource("8_6kmu4"), ExtResource("9_ljnbp"), ExtResource("10_fxcq2"), ExtResource("10_fxcq2"), ExtResource("10_fxcq2"), ExtResource("11_568vk"), ExtResource("12_gg73b"), ExtResource("13_dudkv"), ExtResource("14_nhb52"), ExtResource("15_k3vuq")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1udku"]
_data = {
"RESET": SubResource("Animation_2p14g"),
"carriage": SubResource("Animation_cxxfk")
}

[node name="Control" type="Control" node_paths=PackedStringArray("ShuffleButton", "ResetButton", "PiecesContainer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = -1.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_uopbu")
source_texture = ExtResource("2_7knxp")
piece_size = Vector2(200, 200)
ShuffleButton = NodePath("HBoxContainer/ShuffleButton")
ResetButton = NodePath("HBoxContainer/ResetButton")
PiecesContainer = NodePath("PiecesContainer")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1381.0
offset_top = -882.0
offset_right = 1611.0
offset_bottom = 730.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.2, 0.2, 0.2, 0.827451)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -669.0
offset_top = -411.0
offset_right = 669.0
offset_bottom = 411.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(630.615, 267.699)
mouse_filter = 1
theme = ExtResource("3_srxaq")

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_vpfxr")
theme_override_font_sizes/font_size = 69
text = "基建工程-加固城墙"

[node name="Label2" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_vpfxr")
theme_override_font_sizes/font_size = 48
text = "剩余时间:60秒"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 370.0
offset_top = 777.0
offset_right = 1549.0
offset_bottom = 909.0

[node name="ShuffleButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 51
text = "放弃"

[node name="ResetButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "重开"

[node name="Control2" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control4" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(4.455, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 758.0
offset_top = 305.0
offset_right = 1270.0
offset_bottom = 817.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("7_hjoyj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
libraries = {
"": SubResource("AnimationLibrary_1udku")
}
autoplay = "RESET"

[node name="PiecesContainer" type="Node2D" parent="."]
position = Vector2(648, 248)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1604.0
offset_top = -1099.0
offset_right = 1388.0
offset_bottom = 513.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0)

[node name="RotateButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1343.0
offset_top = 647.0
offset_right = 1505.0
offset_bottom = 794.0
pivot_offset = Vector2(77.445, 73.435)
texture_normal = ExtResource("16_3i658")
ignore_texture_size = true
stretch_mode = 5

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 1317.0
offset_top = 805.0
offset_right = 1537.0
offset_bottom = 891.0
theme_override_colors/font_color = Color(0.920739, 0.825048, 0.614126, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("4_8k53q")
theme_override_font_sizes/font_size = 37
text = "旋转拼图"
horizontal_alignment = 1

[node name="SettleButton" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 1346.0
offset_top = 231.0
offset_right = 1508.0
offset_bottom = 378.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(77.445, 73.435)
texture_normal = ExtResource("5_a1noe")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1320.0
offset_top = 389.0
offset_right = 1540.0
offset_bottom = 475.0
theme_override_colors/font_color = Color(0.920739, 0.825048, 0.614126, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("4_8k53q")
theme_override_font_sizes/font_size = 37
text = "放弃基建"
horizontal_alignment = 1

[connection signal="button_down" from="RotateButton" to="." method="_on_rotate_button_button_down"]
[connection signal="button_down" from="SettleButton" to="." method="_on_giveup_button_down"]
[connection signal="mouse_entered" from="SettleButton" to="." method="_on_giveup_button_mouse_entered"]
[connection signal="mouse_exited" from="SettleButton" to="." method="_on_giveup_button_mouse_exited"]
